# SYgraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DoxygenSetup.cmake  SetupOptions.cmake
docs/: index.md
examples/: CMakeLists.txt  csr_to_binary.cpp  mm_to_binary.cpp
examples/bc/: bc.cpp
examples/bfs/: bfs.cpp
examples/cc/: cc.cpp
examples/include/: utils.hpp
examples/pr/: pagerank_compare.cpp  pagerank_cpu.cpp  pagerank_gpu.cpp  pr.cpp
examples/sssp/: sssp.cpp
examples/tc/: tc.cpp
include/sygraph/: sygraph.hpp
include/sygraph/algorithms/: bc.hpp  bfs.hpp  cc.hpp  pr.hpp  sssp.hpp  tc.hpp
include/sygraph/formats/: csr.hpp
include/sygraph/frontier/impls/: bitmap_frontier.hpp  mlb_frontier.hpp
include/sygraph/graph/: build.hpp  graph.hpp
include/sygraph/graph/impls/: graph_csr.hpp
include/sygraph/io/: matrices.hpp  read_coo.hpp  read_csr.hpp
include/sygraph/operators/: config.hpp
include/sygraph/operators/advance/: advance.hpp  bucketing.hpp  common.hpp  workgroup_mapped.hpp
include/sygraph/operators/filter/: bitmap_filter_impl.hpp
include/sygraph/operators/for/: for.hpp  impl_for.hpp
include/sygraph/operators/intersection/: bitmap_intersect_impl.hpp  intersection.hpp
include/sygraph/sycl/: event.hpp
include/sygraph/utils/: device.hpp  kernel.hpp  memory.hpp  profiler.hpp  vector.hpp
scripts/: benchmark.sh  hybrid-advance.sh
tests/: CMakeLists.txt
tests/algorithms/: bc.cpp  bfs.cpp  cc.cpp  sssp.cpp  tc.cpp
tests/formats/: coo2csr.cpp  coo2csr_unweighted.cpp  csr.cpp  properties.cpp
tests/frontier/: bitmap_frontier.cpp  mlb_frontier.cpp
tests/graph/: graph.cpp  graph_teardown.cpp
tests/include/: test_utils.hpp
tests/operators/: advance.cpp  advance_graph.cpp  advance_pull.cpp  filter_compute.cpp  intersection.cpp
